re-use prettier

--- a/.homeyignore
+++ b/.homeyignore
@@ -1,7 +1,5 @@
-coverage/*
-tests/*
+docs/*
 eslint.config.js
-jest.config.ts
+sonar-project.properties
 LICENSE
 README.md
-sonar-project.properties
