--- a/package.json
+++ b/package.json
@@ -22,12 +22,10 @@
     "@types/homey": "npm:homey-apps-sdk-v3-types@^0.3.5",
     "@types/luxon": "^3.4.2",
     "@types/node": "^20.12.7",
-    "@types/tough-cookie": "^4.0.5",
     "eslint": "^9.1.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-markdown": "^4.0.1",
     "globals": "^15.1.0",
     "homey": "^3.2.4",
     "prettier": "^3.2.5",
@@ -35,10 +33,8 @@
     "typescript-eslint": "^7.8.0"
   },
   "dependencies": {
-    "axios": "^1.6.8",
-    "axios-cookiejar-support": "^5.0.1",
+    "ariston-api": "^1.0.0",
     "luxon": "^3.4.4",
-    "source-map-support": "^0.5.21",
-    "tough-cookie": "^4.1.4"
+    "source-map-support": "^0.5.21"
   }
 }
