--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "lib": ["DOM", "ESNext"],
+    "lib": ["ESNext"],
     "module": "NodeNext",
     "noImplicitOverride": true,
     "outDir": ".homeybuild",
