--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "homey": "^3.2.4",
     "prettier": "^3.2.5",
     "typescript": "^5.4.5",
-    "typescript-eslint": "^7.9.0"
+    "typescript-eslint": "^8.0.0-alpha.10"
   },
   "dependencies": {
     "@olivierzal/ariston-api": "^1.0.0",
