--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,8 @@
 {
+  "extends": "./tsconfig.base.json",
   "compilerOptions": {
-    "lib": ["ESNext"],
-    "module": "NodeNext",
-    "noImplicitOverride": true,
     "outDir": ".homeybuild",
-    "skipLibCheck": true,
     "sourceMap": true,
-    "strict": true,
     "target": "ES2022"
   }
 }
