--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
   },
   "description": {
     "en": "Take control of your water heater",
-    "fr": "Prenez le contrôle de votre ballon d'eau chaude"
+    "fr": "Prenez le contrôle de votre chauffe-eau"
   },
   "category": [
     "climate"
