--- a/.homeycompose/app.json
+++ b/.homeycompose/app.json
@@ -8,7 +8,7 @@
   },
   "description": {
     "en": "Take control of your water heater",
-    "fr": "Prenez le contrôle de votre ballon d'eau chaude"
+    "fr": "Prenez le contrôle de votre chauffe-eau"
   },
   "category": ["climate"],
   "version": "8.0.1",
